feat: aggs query 추가
