# src/routes/search.routes.js
@@ -4,6 +4,7 @@ import {
   getAllDocs,
   getAllDocs2,
   getAllDocs3,
+  getScholarshipStats,
 } from "../controllers/search.controller.js";
 
 const router = express.Router();
@@ -12,8 +13,10 @@ router.get("/search", search);
 
 router.get("/indices/scholarship", getAllDocs);
 
-router.get("/indices/scholarship2", getAllDocs2);
+router.get("/indices/scholarship/query", getAllDocs2);
 
-router.get("/indices/scholarship3", getAllDocs3);
+router.get("/indices/scholarship/custom-response", getAllDocs3);
+
+router.get("/indices/scholarship/stats", getScholarshipStats);
 
 export default router;
